<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            app:elevation="4dp"
            app:layout_collapseMode="pin"
            app:layout_constraintBottom_toTopOf="@+id/home_tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"/>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/home_tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/home_viewpager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
            app:tabMode="fixed"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/home_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/home_tabs"
            app:layout_constraintTop_toBottomOf="@+id/home_tabs"/>

</androidx.constraintlayout.widget.ConstraintLayout>
