...
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_rating"
                app:layout_constraintBottom_toTopOf="@+id/movie_details_video_btn">

            <TextView
                    android:id="@+id/detail_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Synopsis"
...
